--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -4,13 +4,27 @@
   <title>Page Title</title>
   
   <body>
+    <link rel="stylesheet" href="hw1.css">
+    <div id="logo"><img src="logo-01.svg" alt="BunBunLogo"></div>
+    <div id="body-text">
+      <h2 class="divider">PRODUCT</h2>
+      <h2>CART</h2>
+      <h1>Original cinammon roll</h1>
+      <div id="roll"><img src="original-cinnamon-roll.jpg" alt="-cinnamon-roll"></div>
+      <div id="explanation">
+        <p>
+          customize our delicious,<br>
+          hand-made cinnamon roll to<br>
+          your liking!
+        </p>
+      </div>
+  
+    </div>
 
-    <h1>I am the solution to HW1!</h1>
-    <div>Testingtestingtesting</div>
-
+<!-- 
     <p>
         And I can link to <a href="./otherpage.html">other pages.</a>
-    </p>
+    </p> -->
 
   </body>
 </html>
