Dropbox css update

--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -17,6 +17,18 @@
           hand-made cinnamon roll to<br>
           your liking!
         </p>
+        <div class="dropdown">
+          <button class="dropbtn">keep original</button>
+          <div class="dropdown-content">
+            <ul>
+              <li>keep original</li>
+              <li>sugar milk</li>
+              <li>vanilla milk</li>
+              <li>double chocolate</li>
+            </ul>
+          </div>
+        </div>  
+        
       </div>
   
     </div>
