pretty finalized css version

--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <meta charset="UTF-8">
-  <title>Page Title</title>
+  <title>HW1 Detail</title>
   
   <body>
     <link rel="stylesheet" href="hw1.css">
@@ -17,20 +17,16 @@
           hand-made cinnamon roll to<br>
           your liking!
         </p>
-        <div class="dropdown">
-          <button class="dropbtn">keep original</button>
-          <div class="dropdown-content">
-            <ul>
-              <li>keep original</li>
-              <li>sugar milk</li>
-              <li>vanilla milk</li>
-              <li>double chocolate</li>
-            </ul>
-          </div>
-        </div>  
-        
+        <label for = "dropbox" id = "KeepOriginal"></label>
+        <select id="keep original">
+          <option>Keep original</option>
+          <option>Sugar milk</option>
+          <option>Vanilla milk</option>
+          <option>"Double chocolate</option>
+        </select>
       </div>
-  
+      <h2 id="price">$2.49</h2>
+      <button id="AddCart">Add to Cart</button>
     </div>
 
 <!-- 
