--- a/solution-hw1/hw1Detail.html
+++ b/solution-hw1/hw1Detail.html
@@ -7,25 +7,38 @@
     <link rel="stylesheet" href="hw1.css">
     <div id="logo"><img src="logo-01.svg" alt="BunBunLogo"></div>
     <div id="body-text">
-      <h2 class="divider">PRODUCT</h2>
-      <h2>CART</h2>
-      <h1>Original cinammon roll</h1>
+      <h4 class="divider"><mark>PRODUCT</mark></h4>
+      <p>CART</p>
+      <p class="productName">Original cinammon roll</p>
       <div id="roll"><img src="original-cinnamon-roll.jpg" alt="-cinnamon-roll"></div>
       <div id="explanation">
-        <p>
-          customize our delicious,<br>
-          hand-made cinnamon roll to<br>
-          your liking!
-        </p>
-        <label for = "dropbox" id = "KeepOriginal"></label>
-        <select id="keep original">
-          <option>Keep original</option>
-          <option>Sugar milk</option>
-          <option>Vanilla milk</option>
-          <option>"Double chocolate</option>
-        </select>
+        <div class="description">
+          <p>
+            customize our delicious,<br>
+            hand-made cinnamon roll to<br>
+            your liking!
+          </p>
+        </div>
+        <div class="choices">
+          <label for = "dropbox" id = "KeepOriginal">Glazing:</label>
+          <select id="keep original">
+            <option>Keep original</option>
+            <option>Sugar milk</option>
+            <option>Vanilla milk</option>
+            <option>"Double chocolate</option>
+          </select>
+          <div class="seconddropbox">
+            <label for = "dropbox" id = "packSize">Pack size:</label>
+            <select id="packSize">
+              <option>1</option>
+              <option>3</option>
+              <option>6</option>
+              <option>12</option>
+            </select>
+          </div>
+        </div>
       </div>
-      <h2 id="price">$2.49</h2>
+      <h4 id="price">$2.49</h4>
       <button id="AddCart">Add to Cart</button>
     </div>
 
