--- a/solution-hw1/hw1Detail.html
+++ b/solution-hw1/hw1Detail.html
@@ -38,8 +38,10 @@
           </div>
         </div>
       </div>
-      <h4 id="price">$2.49</h4>
-      <button id="AddCart">Add to Cart</button>
+      <div id="footer">
+        <h4 id="price">$2.49</h4>
+        <button id="AddCart">Add to Cart</button>
+      </div>
     </div>
 
 <!-- 
