setting up for homework submission

--- a/solution-hw1/hw1Cart.html
+++ b/solution-hw1/hw1Cart.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="hw1.css">
     <div id="logo"><img src="logo-01.svg" alt="BunBunLogo"></div>
     <div id="body-text">
-      <h2 class="divider">PRODUCT</h2>
-      <h2>CART</h2>
+      <a href="hw1Products.html"><h2 class="divider">PRODUCT</h2></a>
+      <a href="hw1Cart.html"><h2><mark>CART</mark></h2></a>
       <h1>Shopping Cart</h1>
       <div id="roll"><img src="original-cinnamon-roll.jpg" alt="-cinnamon-roll"></div>
       <h5>Remove</h5>
@@ -25,7 +25,7 @@
       </p>
       <h2>$27.45</h2>
       <h2 class="divider2" class="bottom">Total:$29.94</h2>
-      <button id="AddCart">Add to Cart</button>
+      <button id="AddCart">Checkout</button>
     </div>
   </body>
 </html>
