--- a/solution-hw1/hw1Detail.html
+++ b/solution-hw1/hw1Detail.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="hw1.css">
     <div id="logo"><img src="logo-01.svg" alt="BunBunLogo"></div>
     <div id="body-text">
-      <h4 class="divider"><mark>PRODUCT</mark></h4>
-      <p>CART</p>
+      <a href="hw1Products.html"><h2 class="divider"><mark>PRODUCT</mark>></h2></a>
+      <a href="hw1Cart.html"><h2>CART</h2></a>
       <p class="productName">Original cinammon roll</p>
       <div id="roll"><img src="original-cinnamon-roll.jpg" alt="-cinnamon-roll"></div>
       <div id="explanation">
