--- a/solution-hw1/hw1Products.html
+++ b/solution-hw1/hw1Products.html
@@ -6,8 +6,8 @@
         <link rel="stylesheet" href="hw1.css">
         <div id="logo"><img src="logo-01.svg" alt="BunBunLogo"></div>
         <div id="body-text">
-          <h2 class="divider">PRODUCT</h2>
-          <h2>CART</h2>
+          <a href="hw1Products.html"><h2 class="divider"><mark>PRODUCT</mark></h2></a>
+          <a href="hw1Cart.html"><h2>CART</h2></a>
           <h1>Our hand-made cinnamon rolls</h1>
           <div id="roll"><img src="original-cinnamon-roll.jpg" alt="-cinnamon-roll"></div>
           <div id="explanation">
