--- a/solution-hw1/hw1Cart.html
+++ b/solution-hw1/hw1Cart.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="hw1.css">
     <div id="logo"><img src="logo-01.svg" alt="BunBunLogo"></div>
     <div id="body-text">
-      <a href="hw1Products.html"><h2 class="divider">PRODUCT</h2></a>
+      <a href="index.html"><h2 class="divider">PRODUCT</h2></a>
       <a href="hw1Cart.html"><h2><mark>CART</mark></h2></a>
       <h1>Shopping Cart</h1>
       <div id="roll"><img src="original-cinnamon-roll.jpg" alt="-cinnamon-roll"></div>
