--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -9,38 +9,38 @@
           <a href="index.html"><h2 class="divider"><mark>PRODUCT</mark></h2></a>
           <a href="hw1Cart.html"><h2>CART</h2></a>
           <h1>Our hand-made cinnamon rolls</h1>
-          <div id="roll"><img src="original-cinnamon-roll.jpg" alt="-cinnamon-roll"></div>
+          <a href="hw1Detail.html"><div id="roll"><img src="original-cinnamon-roll.jpg" alt="-cinnamon-roll"></div></a>
           <div id="explanation">
-            <p>original-cinnamon-roll <br>
+            <p><a href="hw1Detail.html">original-cinnamon-roll</a> <br>
                 $2.49
             </p>
           </div>
           <div id="roll"><img src="apple-cinnamon-roll.jpg" alt="-cinnamon-roll"></div>
           <div id="explanation">
-            <p>original-cinnamon-roll</p> 
+            <p><a href="hw1Detail.html">apple-cinnamon-roll</a></p> 
             <p>$2.49</p>
           </div>
           <div id="roll"><img src="raisin-cinnamon-roll.jpg" alt="-cinnamon-roll"></div>
           <div id="explanation">
-            <p>original-cinnamon-roll <br>
+            <p><a href="hw1Detail.html">raisin-cinnamon-roll</a> <br>
                 $2.49
             </p>
           </div>
           <div id="roll"><img src="walnut-cinnamon-roll.jpg" alt="-cinnamon-roll"></div>
           <div id="explanation">
-            <p>original-cinnamon-roll <br>
+            <p><a href="hw1Detail.html">walnut-cinnamon-roll</a><br>
                 $2.49
             </p>
           </div>
           <div id="roll"><img src="double-chocolate-cinnamon-roll.jpg" alt="-cinnamon-roll"></div>
           <div id="explanation">
-            <p>original-cinnamon-roll <br>
+            <p><a href="hw1Detail.html">double-chocolate-cinnamon-roll</a> <br>
                 $2.49
             </p>
           </div>
           <div id="roll"><img src="strawberry-cinnamon-roll.jpg" alt="-cinnamon-roll"></div>
           <div id="explanation">
-            <p>original-cinnamon-roll <br>
+            <p><a href="hw1Detail.html">original-cinnamon-roll</a> <br>
                 $2.49
             </p>
           </div>
