--- a/solution-hw1/hw1Cart.html
+++ b/solution-hw1/hw1Cart.html
@@ -9,7 +9,7 @@
     <div id="body-text">
       <a href="index.html"><h2 class="divider">PRODUCT</h2></a>
       <a href="hw1Cart.html"><h2><mark>CART</mark></h2></a>
-      <h1>Shopping Cart</h1>
+      <p class="productName">Shopping Cart</p>
       <div id="roll"><img src="original-cinnamon-roll.jpg" alt="-cinnamon-roll"></div>
       <h5>Remove</h5>
       <p>Original Cinnamon roll <br>
