--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -8,7 +8,7 @@
         <div id="body-text">
           <a href="index.html"><h2 class="divider"><mark>PRODUCT</mark></h2></a>
           <a href="hw1Cart.html"><h2>CART</h2></a>
-          <h1>Our hand-made cinnamon rolls</h1>
+          <p class="productName">Our hand-made cinnamon rolls</p>
           <a href="hw1Detail.html"><div id="roll"><img src="original-cinnamon-roll.jpg" alt="-cinnamon-roll"></div></a>
           <div id="explanation">
             <p><a href="hw1Detail.html">original-cinnamon-roll</a> <br>
