enlarged the product size on detailed page

--- a/solution-hw1/hw1Detail.html
+++ b/solution-hw1/hw1Detail.html
@@ -10,7 +10,7 @@
       <a href="index.html"><h2 class="divider"><mark>PRODUCT</mark></h2></a>
       <a href="hw1Cart.html"><h2>CART</h2></a>
       <p class="productName">Original cinammon roll</p>
-      <div id="roll"><img src="original-cinnamon-roll.jpg" alt="-cinnamon-roll"></div>
+      <div id="enlargedRoll"><img src="original-cinnamon-roll.jpg" alt="-cinnamon-roll"></div>
       <div id="explanation">
         <div class="description">
           <p>
