--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -11,36 +11,36 @@
           <p class="productName">Our hand-made cinnamon rolls</p>
           <a href="hw1Detail.html"><div id="roll"><img src="original-cinnamon-roll.jpg" alt="-cinnamon-roll"></div></a>
           <div id="explanation">
-            <p><a href="hw1Detail.html">original-cinnamon-roll</a> <br>
+            <p><a href="hw1Detail.html" class="underlinesTitles">original-cinnamon-roll</a> <br>
                 $2.49
             </p>
           </div>
           <a href="hw1Detail.html"><div id="roll"><img src="apple-cinnamon-roll.jpg" alt="-cinnamon-roll"></div></a>
           <div id="explanation">
-            <p><a href="hw1Detail.html">apple-cinnamon-roll</a></p> 
+            <p><a href="hw1Detail.html" class="underlinesTitles">apple-cinnamon-roll</a></p> 
             <p>$2.49</p>
           </div>
           <a href="hw1Detail.html"><div id="roll"><img src="raisin-cinnamon-roll.jpg" alt="-cinnamon-roll"></div></a>
           <div id="explanation">
-            <p><a href="hw1Detail.html">raisin-cinnamon-roll</a> <br>
+            <p><a href="hw1Detail.html" class="underlinesTitles">raisin-cinnamon-roll</a> <br>
                 $2.49
             </p>
           </div>
           <a href="hw1Detail.html"><div id="roll"><img src="walnut-cinnamon-roll.jpg" alt="-cinnamon-roll"></div></a>
           <div id="explanation">
-            <p><a href="hw1Detail.html">walnut-cinnamon-roll</a><br>
+            <p><a href="hw1Detail.html" class="underlinesTitles">walnut-cinnamon-roll</a><br>
                 $2.49
             </p>
           </div>
           <a href="hw1Detail.html"><div id="roll"><img src="double-chocolate-cinnamon-roll.jpg" alt="-cinnamon-roll"></div></a>
           <div id="explanation">
-            <p><a href="hw1Detail.html">double-chocolate-cinnamon-roll</a> <br>
+            <p><a href="hw1Detail.html" class="underlinesTitles">double-chocolate-cinnamon-roll</a> <br>
                 $2.49
             </p>
           </div>
           <a href="hw1Detail.html"><div id="roll"><img src="strawberry-cinnamon-roll.jpg" alt="-cinnamon-roll"></div></a>
           <div id="explanation">
-            <p><a href="hw1Detail.html">original-cinnamon-roll</a> <br>
+            <p><a href="hw1Detail.html" class="underlinesTitles">original-cinnamon-roll</a> <br>
                 $2.49
             </p>
           </div>
