deleted paddings on the dropdowns

--- a/solution-hw1/hw1Cart.html
+++ b/solution-hw1/hw1Cart.html
@@ -16,15 +16,15 @@
         Glazing: Keep original <br>
         Pack Size: 1
       </p>
-      <h2>$2.49</h2>
+      <h3>$2.49</h3>
       <div id="roll"><img src="double-chocolate-cinnamon-roll.jpg" alt="double-chocolate-roll"></div>
       <h5>Remove</h5>
       <p>Double Chocolate Cinnamon Roll <br>
         Glazing: Sugar milk <br>
         Pack Size: 6
       </p>
-      <h2>$27.45</h2>
-      <h2 class="divider2" class="bottom">Total:$29.94</h2>
+      <h3>$27.45</h3>
+      <p class="divider2" class="bottom">Total:$29.94</p>
       <button id="AddCart">Checkout</button>
     </div>
   </body>
