--- a/solution-hw1/hw1Cart.html
+++ b/solution-hw1/hw1Cart.html
@@ -2,13 +2,21 @@
 <html lang="en">
   <meta charset="UTF-8">
   <title>HW1 CART</title>
-  
+
+  <link rel="stylesheet" href="hw1.css">
+
   <body>
-    <link rel="stylesheet" href="hw1.css">
-    <div id="logo"><img src="logo-01.svg" alt="BunBunLogo"></div>
+    <header>
+      <div id="topPortion">
+        <div id="logo"><img src="logo-01.svg" alt="BunBunLogo"></div>
+        <div id="topLeftPortion">
+          <a href="index.html"><h2 class="divider">PRODUCT</h2></a>
+          <a href="hw1Cart.html"><h2><mark>CART</mark></h2></a>
+        </div>
+      </div>
+  </header>
+
     <div id="body-text">
-      <a href="index.html"><h2 class="divider">PRODUCT</h2></a>
-      <a href="hw1Cart.html"><h2><mark>CART</mark></h2></a>
       <p class="productName">Shopping Cart</p>
       <div id="roll"><img src="original-cinnamon-roll.jpg" alt="-cinnamon-roll"></div>
       <h5>Remove</h5>
