finished the layouts of two pages

--- a/solution-hw1/hw1Cart.html
+++ b/solution-hw1/hw1Cart.html
@@ -9,29 +9,48 @@
     <header>
       <div id="topPortion">
         <div id="logo"><img src="logo-01.svg" alt="BunBunLogo"></div>
-        <div id="topLeftPortion">
-          <a href="index.html"><h2 class="divider">PRODUCT</h2></a>
-          <a href="hw1Cart.html"><h2><mark>CART</mark></h2></a>
+        <div id="navTexts">
+          <div id="topLeftPortion">
+            <a href="index.html"><h2 class="divider">PRODUCT</h2></a>
+            <a href="hw1Cart.html"><h2><mark>CART</mark></h2></a>
+          </div>
+          <div id="pagetitle">
+            <p>Shopping Cart</p>
+          </div>
         </div>
       </div>
-  </header>
-
-    <div id="body-text">
-      <p class="productName">Shopping Cart</p>
-      <div id="roll"><img src="original-cinnamon-roll.jpg" alt="-cinnamon-roll"></div>
-      <h5>Remove</h5>
-      <p>Original Cinnamon roll <br>
-        Glazing: Keep original <br>
-        Pack Size: 1
-      </p>
-      <h3>$2.49</h3>
-      <div id="roll"><img src="double-chocolate-cinnamon-roll.jpg" alt="double-chocolate-roll"></div>
-      <h5>Remove</h5>
-      <p>Double Chocolate Cinnamon Roll <br>
-        Glazing: Sugar milk <br>
-        Pack Size: 6
-      </p>
-      <h3>$27.45</h3>
+    </header>
+    <div id="body-textCart">
+      <div id="cartItems">
+        <div id="explanation">
+          <div id="roll"><img src="original-cinnamon-roll.jpg" alt="-cinnamon-roll"></div>
+          <h5>Remove</h5>
+        </div>
+        <div id="cartExplanation">
+          <p>Original Cinnamon roll <br>
+            Glazing: Keep original <br>
+            Pack Size: 1
+          </p>
+          <div id="cartPrice">
+            <h3>$2.49</h3>
+          </div>
+        </div>
+      </div>
+      <div id="cartItems">
+        <div id="explanation">
+          <div id="roll"><img src="double-chocolate-cinnamon-roll.jpg" alt="double-chocolate-roll"></div>
+          <h5>Remove</h5>
+        </div>
+        <div id="cartExplanation">
+          <p>Double Chocolate Cinnamon Roll <br>
+            Glazing: Sugar milk <br>
+            Pack Size: 6
+          </p>
+          <div id="cartPrice">
+            <h3>$27.45</h3>
+          </div>
+        </div>
+      </div>
       <p class="divider2" class="bottom">Total:$29.94</p>
       <button id="AddCart">Checkout</button>
     </div>
