--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -1,49 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-    <meta charset="UTF-8">
-    <title>Product</title>
-    <body>
-        <link rel="stylesheet" href="hw1.css">
+  <meta charset="UTF-8">
+  <title>Product</title>
+  <link rel="stylesheet" href="hw1.css">
+  <body>
+    <header>
+      <div id="topPortion">
         <div id="logo"><img src="logo-01.svg" alt="BunBunLogo"></div>
-        <div id="body-text">
-          <a href="index.html"><h2 class="divider"><mark>PRODUCT</mark></h2></a>
-          <a href="hw1Cart.html"><h2>CART</h2></a>
-          <p class="productName">Our hand-made cinnamon rolls</p>
-          <a href="hw1Detail.html"><div id="roll"><img src="original-cinnamon-roll.jpg" alt="-cinnamon-roll"></div></a>
-          <div id="explanation">
-            <p><a href="hw1Detail.html" class="underlinesTitles">original-cinnamon-roll</a> <br>
-                $2.49
-            </p>
+        <div id="navTexts">
+          <div id="topLeftPortion">
+            <a href="index.html"><h2 class="divider"><mark>PRODUCT</mark></h2></a>
+            <a href="hw1Cart.html"><h2>CART</h2></a>
           </div>
-          <a href="hw1Detail.html"><div id="roll"><img src="apple-cinnamon-roll.jpg" alt="-cinnamon-roll"></div></a>
-          <div id="explanation">
-            <p><a href="hw1Detail.html" class="underlinesTitles">apple-cinnamon-roll</a></p> 
-            <p>$2.49</p>
-          </div>
-          <a href="hw1Detail.html"><div id="roll"><img src="raisin-cinnamon-roll.jpg" alt="-cinnamon-roll"></div></a>
-          <div id="explanation">
-            <p><a href="hw1Detail.html" class="underlinesTitles">raisin-cinnamon-roll</a> <br>
-                $2.49
-            </p>
-          </div>
-          <a href="hw1Detail.html"><div id="roll"><img src="walnut-cinnamon-roll.jpg" alt="-cinnamon-roll"></div></a>
-          <div id="explanation">
-            <p><a href="hw1Detail.html" class="underlinesTitles">walnut-cinnamon-roll</a><br>
-                $2.49
-            </p>
-          </div>
-          <a href="hw1Detail.html"><div id="roll"><img src="double-chocolate-cinnamon-roll.jpg" alt="-cinnamon-roll"></div></a>
-          <div id="explanation">
-            <p><a href="hw1Detail.html" class="underlinesTitles">double-chocolate-cinnamon-roll</a> <br>
-                $2.49
-            </p>
-          </div>
-          <a href="hw1Detail.html"><div id="roll"><img src="strawberry-cinnamon-roll.jpg" alt="-cinnamon-roll"></div></a>
-          <div id="explanation">
-            <p><a href="hw1Detail.html" class="underlinesTitles">original-cinnamon-roll</a> <br>
-                $2.49
-            </p>
+          <div id="pagetitle">
+            <p>Our hand-made cinnamon rolls</p>
           </div>
         </div>
-    </body>
+      </div>
+    </header>
+    <div id="body-text">
+      <div id="explanation">
+        <a href="hw1Detail.html"><div id="roll"><img src="original-cinnamon-roll.jpg" alt="-cinnamon-roll"></div></a>
+        <p><a href="hw1Detail.html" class="underlinesTitles">original-cinnamon-roll</a> <br>
+            $2.49
+        </p>
+      </div>
+      <div id="explanation">
+        <a href="hw1Detail.html"><div id="roll"><img src="apple-cinnamon-roll.jpg" alt="-cinnamon-roll"></div></a>
+        <p><a href="hw1Detail.html" class="underlinesTitles">apple-cinnamon-roll</a> <br>
+          2.49
+        </p> 
+      </div>
+      <div id="explanation">
+        <a href="hw1Detail.html"><div id="roll"><img src="raisin-cinnamon-roll.jpg" alt="-cinnamon-roll"></div></a>
+        <p><a href="hw1Detail.html" class="underlinesTitles">raisin-cinnamon-roll</a> <br>
+            $2.49
+        </p>
+      </div>
+      <div id="explanation">
+        <a href="hw1Detail.html"><div id="roll"><img src="walnut-cinnamon-roll.jpg" alt="-cinnamon-roll"></div></a>
+        <p><a href="hw1Detail.html" class="underlinesTitles">walnut-cinnamon-roll</a><br>
+            $2.49
+        </p>
+      </div>
+      <div id="explanation">
+        <a href="hw1Detail.html"><div id="roll"><img src="double-chocolate-cinnamon-roll.jpg" alt="-cinnamon-roll"></div></a>
+        <p><a href="hw1Detail.html" class="underlinesTitles">double-chocolate-cinnamon-roll</a> <br>
+            $2.49
+        </p>
+      </div>
+      <div id="explanation">
+        <a href="hw1Detail.html"><div id="roll"><img src="strawberry-cinnamon-roll.jpg" alt="-cinnamon-roll"></div></a>
+        <p><a href="hw1Detail.html" class="underlinesTitles">original-cinnamon-roll</a> <br>
+            $2.49
+        </p>
+      </div>
+    </div>
+  </body>
 </html>
