finished the layout for everything

--- a/solution-hw1/hw1Cart.html
+++ b/solution-hw1/hw1Cart.html
@@ -21,7 +21,7 @@
       </div>
     </header>
     <div id="body-textCart">
-      <div id="cartItems">
+      <div class="cartItems">
         <div id="explanation">
           <div id="roll"><img src="original-cinnamon-roll.jpg" alt="-cinnamon-roll"></div>
           <h5>Remove</h5>
@@ -36,7 +36,7 @@
           </div>
         </div>
       </div>
-      <div id="cartItems">
+      <div class="cartItems">
         <div id="explanation">
           <div id="roll"><img src="double-chocolate-cinnamon-roll.jpg" alt="double-chocolate-roll"></div>
           <h5>Remove</h5>
@@ -51,8 +51,11 @@
           </div>
         </div>
       </div>
-      <p class="divider2" class="bottom">Total:$29.94</p>
-      <button id="AddCart">Checkout</button>
+      <div id="footer2">
+        <p class="divider2" class="bottom">Total</p>
+        <p>$29.94</p>
+      </div>
+      <button id="Checkout">Checkout</button>
     </div>
   </body>
 </html>
