--- a/solution-hw2/hw2Detail.html
+++ b/solution-hw2/hw2Detail.html
@@ -3,12 +3,12 @@
   <meta charset="UTF-8">
   <title>HW1 Detail</title>
   
-  <link rel="stylesheet" href="hw2.css">
+  <link rel="stylesheet" href="./css/hw2.css">
   
   <body>
     <header>
       <div id="topPortion">
-        <div id="logo"><img src="logo-01.svg" alt="BunBunLogo"></div>
+        <div id="logo"><img src="./images/logo-01.svg" alt="BunBunLogo"></div>
         <div id="navTexts">
           <div id="topLeftPortion">
             <a href="index.html"><h2 class="divider"><mark>PRODUCT</mark></h2></a>
@@ -21,7 +21,7 @@
       </div>
     </header>
     <div id="body-text">
-      <div id="enlargedRoll"><img src="original-cinnamon-roll.jpg" alt="-cinnamon-roll"></div>
+      <div id="enlargedRoll"><img src="./images/original-cinnamon-roll.jpg" alt="-cinnamon-roll"></div>
       <div id="DetailContent">
         <div id="description">
           <p>
