--- a/solution-hw2/index.html
+++ b/solution-hw2/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <meta charset="UTF-8">
   <title>Product</title>
-  <link rel="stylesheet" href="hw2.css">
+  <link rel="stylesheet" href="./css/hw2.css">
   <body>
     <header>
       <div id="topPortion">
-        <div id="logo"><img src="logo-01.svg" alt="BunBunLogo"></div>
+        <div id="logo"><img src="./images/logo-01.svg" alt="BunBunLogo"></div>
         <div id="navTexts">
           <div id="topLeftPortion">
             <a href="index.html"><h2 class="divider"><mark>PRODUCT</mark></h2></a>
@@ -20,37 +20,37 @@
     </header>
     <div id="body-text">
       <div id="explanation">
-        <a href="hw2Detail.html"><div id="roll"><img src="original-cinnamon-roll.jpg" alt="-cinnamon-roll"></div></a>
+        <a href="hw2Detail.html"><div id="roll"><img src="./images/original-cinnamon-roll.jpg" alt="-cinnamon-roll"></div></a>
         <p><a href="hw2Detail.html" class="underlinesTitles">original-cinnamon-roll</a> <br>
             $2.49
         </p>
       </div>
       <div id="explanation">
-        <a href="hw2Detail.html"><div id="roll"><img src="apple-cinnamon-roll.jpg" alt="-cinnamon-roll"></div></a>
+        <a href="hw2Detail.html"><div id="roll"><img src="./images/apple-cinnamon-roll.jpg" alt="-cinnamon-roll"></div></a>
         <p><a href="hw2Detail.html" class="underlinesTitles">apple-cinnamon-roll</a> <br>
           2.49
         </p> 
       </div>
       <div id="explanation">
-        <a href="hw2Detail.html"><div id="roll"><img src="raisin-cinnamon-roll.jpg" alt="-cinnamon-roll"></div></a>
+        <a href="hw2Detail.html"><div id="roll"><img src="./images/raisin-cinnamon-roll.jpg" alt="-cinnamon-roll"></div></a>
         <p><a href="hw2Detail.html" class="underlinesTitles">raisin-cinnamon-roll</a> <br>
             $2.49
         </p>
       </div>
       <div id="explanation">
-        <a href="hw2Detail.html"><div id="roll"><img src="walnut-cinnamon-roll.jpg" alt="-cinnamon-roll"></div></a>
+        <a href="hw2Detail.html"><div id="roll"><img src="./images/walnut-cinnamon-roll.jpg" alt="-cinnamon-roll"></div></a>
         <p><a href="hw2Detail.html" class="underlinesTitles">walnut-cinnamon-roll</a><br>
             $2.49
         </p>
       </div>
       <div id="explanation">
-        <a href="hw2Detail.html"><div id="roll"><img src="double-chocolate-cinnamon-roll.jpg" alt="-cinnamon-roll"></div></a>
+        <a href="hw2Detail.html"><div id="roll"><img src="./images/double-chocolate-cinnamon-roll.jpg" alt="-cinnamon-roll"></div></a>
         <p><a href="hw2Detail.html" class="underlinesTitles">double-chocolate-cinnamon-roll</a> <br>
             $2.49
         </p>
       </div>
       <div id="explanation">
-        <a href="hw2Detail.html"><div id="roll"><img src="strawberry-cinnamon-roll.jpg" alt="-cinnamon-roll"></div></a>
+        <a href="hw2Detail.html"><div id="roll"><img src="./images/strawberry-cinnamon-roll.jpg" alt="-cinnamon-roll"></div></a>
         <p><a href="hw2Detail.html" class="underlinesTitles">original-cinnamon-roll</a> <br>
             $2.49
         </p>
