--- a/solution-hw2/hw2Cart.html
+++ b/solution-hw2/hw2Cart.html
@@ -3,12 +3,12 @@
   <meta charset="UTF-8">
   <title>HW1 CART</title>
 
-  <link rel="stylesheet" href="hw2.css">
+  <link rel="stylesheet" href="./css/hw2.css">
 
   <body>
     <header>
       <div id="topPortion">
-        <div id="logo"><img src="logo-01.svg" alt="BunBunLogo"></div>
+        <div id="logo"><img src="./images/logo-01.svg" alt="BunBunLogo"></div>
         <div id="navTexts">
           <div id="topLeftPortion">
             <a href="index.html"><h2 class="divider">PRODUCT</h2></a>
@@ -23,7 +23,7 @@
     <div id="body-textCart">
       <div class="cartItems">
         <div id="explanation">
-          <div id="roll"><img src="original-cinnamon-roll.jpg" alt="-cinnamon-roll"></div>
+          <div id="roll"><img src="./images/original-cinnamon-roll.jpg" alt="-cinnamon-roll"></div>
           <h5>Remove</h5>
         </div>
         <div id="cartExplanation">
@@ -38,7 +38,7 @@
       </div>
       <div class="cartItems">
         <div id="explanation">
-          <div id="roll"><img src="double-chocolate-cinnamon-roll.jpg" alt="double-chocolate-roll"></div>
+          <div id="roll"><img src="./images/double-chocolate-cinnamon-roll.jpg" alt="double-chocolate-roll"></div>
           <h5>Remove</h5>
         </div>
         <div id="cartExplanation">
