--- a/solution-hw3/hw3Detail.html
+++ b/solution-hw3/hw3Detail.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <meta charset="UTF-8">
-  <title>HW1 Detail</title>
+  <title>hw3 Detail</title>
   
   <link rel="stylesheet" href="./css/hw3.css">
-  <script defer src="js/hw3.js"></script>
+  <script defer src="./js/hw3.js"></script>
   <body>
     <header>
       <div id="topPortion">
@@ -31,24 +31,24 @@
           </p>
         </div>
         <div id="choices">
-          <label for = "dropbox" id = "KeepOriginal">Glazing:</label>
-          <div id="KeepOriginalbox">
-            <select id="KeepOriginal">
-              <option>Keep original</option>
-              <option>Sugar milk</option>
-              <option>Vanilla milk</option>
-              <option>"Double chocolate</option>
+          <label for = "dropbox" id = "glazingOptions">Glazing:</label>
+          <div id="glazingOptionsbox">
+            <select id="glazingOptions">
+              <option value="1">Keep original</option>
+              <option value="2">Sugar milk</option>
+              <option value="3">Vanilla milk</option>
+              <option value="4">Double chocolate</option>
             </select>
           </div>
         </div>
         <div id="seconddropbox">
-          <label for = "dropbox" id = "packSize">Pack size:</label>
-          <div id="packSizebox">
-            <select id="packSize">
-              <option>1</option>
-              <option>3</option>
-              <option>6</option>
-              <option>12</option>
+          <label for = "dropbox" id = "packsizeOptions">Pack size:</label>
+          <div id="packSizeOptionsbox">
+            <select id="packsizeOptions">
+              <option value="1">1</option>
+              <option value="2">3</option>
+              <option value="3">6</option>
+              <option value="4">12</option>
             </select>
           </div>
         </div>
@@ -58,11 +58,5 @@
         </div>
       </div>
     </div>
-
-<!-- 
-    <p>
-        And I can link to <a href="./otherpage.html">other pages.</a>
-    </p> -->
-
   </body>
 </html>
