--- a/solution-hw3/hw3Detail.html
+++ b/solution-hw3/hw3Detail.html
@@ -31,7 +31,7 @@
           </p>
         </div>
         <div id="choices">
-          <label for = "dropbox" id = "glazingOptions">Glazing:</label>
+          <label for = "glazingOptions" id = "glazingOptionsLabel">Glazing:</label>
           <div id="glazingOptionsbox">
             <select id="glazingOptions">
               <option value="1">Keep original</option>
@@ -42,7 +42,7 @@
           </div>
         </div>
         <div id="seconddropbox">
-          <label for = "dropbox" id = "packsizeOptions">Pack size:</label>
+          <label for = "packsizeOptions" id = "packsizeOptionsLabel">Pack size:</label>
           <div id="packSizeOptionsbox">
             <select id="packsizeOptions">
               <option value="1">1</option>
