--- a/solution-hw4/index.html
+++ b/solution-hw4/index.html
@@ -20,37 +20,37 @@
     </header>
     <div id="body-text">
       <div id="explanation">
-        <a href="hw4Detail.html"><div id="roll"><img src="./images/original-cinnamon-roll.jpg" alt="-cinnamon-roll"></div></a>
+        <a href="hw4Detail.html?roll=Original"><div id="roll"><img src="./images/original-cinnamon-roll.jpg" alt="-cinnamon-roll"></div></a>
         <p><a href="hw4Detail.html" class="underlinesTitles">original-cinnamon-roll</a> <br>
             $2.49
         </p>
       </div>
       <div id="explanation">
-        <a href="hw4Detail.html"><div id="roll"><img src="./images/apple-cinnamon-roll.jpg" alt="-cinnamon-roll"></div></a>
+        <a href="hw4Detail.html?roll=Apple"><div id="roll"><img src="./images/apple-cinnamon-roll.jpg" alt="-cinnamon-roll"></div></a>
         <p><a href="hw4Detail.html" class="underlinesTitles">apple-cinnamon-roll</a> <br>
           2.49
         </p> 
       </div>
       <div id="explanation">
-        <a href="hw4Detail.html"><div id="roll"><img src="./images/raisin-cinnamon-roll.jpg" alt="-cinnamon-roll"></div></a>
+        <a href="hw4Detail.html?roll=Raisin"><div id="roll"><img src="./images/raisin-cinnamon-roll.jpg" alt="-cinnamon-roll"></div></a>
         <p><a href="hw4Detail.html" class="underlinesTitles">raisin-cinnamon-roll</a> <br>
             $2.49
         </p>
       </div>
       <div id="explanation">
-        <a href="hw4Detail.html"><div id="roll"><img src="./images/walnut-cinnamon-roll.jpg" alt="-cinnamon-roll"></div></a>
+        <a href="hw4Detail.html?roll=Walnut"><div id="roll"><img src="./images/walnut-cinnamon-roll.jpg" alt="-cinnamon-roll"></div></a>
         <p><a href="hw4Detail.html" class="underlinesTitles">walnut-cinnamon-roll</a><br>
             $2.49
         </p>
       </div>
       <div id="explanation">
-        <a href="hw4Detail.html"><div id="roll"><img src="./images/double-chocolate-cinnamon-roll.jpg" alt="-cinnamon-roll"></div></a>
+        <a href="hw4Detail.html?roll=Double-Chocolate"><div id="roll"><img src="./images/double-chocolate-cinnamon-roll.jpg" alt="-cinnamon-roll"></div></a>
         <p><a href="hw4Detail.html" class="underlinesTitles">double-chocolate-cinnamon-roll</a> <br>
             $2.49
         </p>
       </div>
       <div id="explanation">
-        <a href="hw4Detail.html"><div id="roll"><img src="./images/strawberry-cinnamon-roll.jpg" alt="-cinnamon-roll"></div></a>
+        <a href="hw4Detail.html?roll=Strawberry"><div id="roll"><img src="./images/strawberry-cinnamon-roll.jpg" alt="-cinnamon-roll"></div></a>
         <p><a href="hw4Detail.html" class="underlinesTitles">original-cinnamon-roll</a> <br>
             $2.49
         </p>
