--- a/solution-hw4/hw4Detail.html
+++ b/solution-hw4/hw4Detail.html
@@ -15,13 +15,13 @@
             <a href="hw4Cart.html"><h2>CART</h2></a>
           </div>
           <div id="pagetitle">
-            <p>Original cinammon roll</p>
+            <p id="roll-name">Original cinammon roll</p>
           </div>
         </div>
       </div>
     </header>
     <div id="body-text">
-      <div id="enlargedRoll"><img src="./images/original-cinnamon-roll.jpg" alt="-cinnamon-roll"></div>
+      <div id="enlargedRoll"><img id="roll-image" src="./images/original-cinnamon-roll.jpg" alt="-cinnamon-roll"></div>
       <div id="DetailContent">
         <div id="description">
           <p>
