updated the price

--- a/solution-hw4/hw4Detail.html
+++ b/solution-hw4/hw4Detail.html
@@ -5,6 +5,7 @@
   
   <link rel="stylesheet" href="./css/hw4.css">
   <script defer src="./js/hw4.js"></script>
+  <script defer src="./js/rollData.js"></script>
   <body>
     <header>
       <div id="topPortion">
