--- a/solution-hw4 copy/hw5Cart.html
+++ b/solution-hw4 copy/hw5Cart.html
@@ -7,22 +7,6 @@
   <script defer src="./js/rollData.js"></script>
   <script defer src="./js/hw5Cart.js"></script>
 
-  <template id="cart-item">
-    <div id="explanation">
-      <div id="roll"><img id="roll-image" src="./images/original-cinnamon-roll.jpg" alt="-cinnamon-roll"></div>
-      <h5 id="remove-button">Remove</h5>
-    </div>
-    <div id="cartExplanation">
-      <p id="roll-type">Original Cinnamon roll <br>
-        Glazing: <span id="glazing">Keep original</span><br>
-        Pack Size: <span id="pack-size">1</span>
-      </p>
-      <div id="cartPrice">
-        <h3 id="pricing">$2.49</h3>
-      </div>
-    </div> 
-  </template>
-
   <body>
     <header>
       <div id="topPortion">
@@ -38,34 +22,54 @@
         </div>
       </div>
     </header>
-    <div id="body-textCart">
-      <div class="cartItems">
+    <template id="roll-template">
+      <div class ="rollItem">
         <div id="explanation">
-          <div id="roll"><img src="./images/original-cinnamon-roll.jpg" alt="-cinnamon-roll"></div>
-          <h5>Remove</h5>
+          <div id="roll"><img id="roll-image" src="./images/original-cinnamon-roll.jpg" alt="-cinnamon-roll"></div>
+          <h5 class= "remove-button">Remove</h5>
         </div>
         <div id="cartExplanation">
-          <p>Original Cinnamon roll <br>
-            Glazing: Keep original <br>
-            Pack Size: 1
+          <p id="roll-type">Original Cinnamon roll <br>
+            Glazing: <span id="glazing">Keep original</span><br>
+            Pack Size: <span id="pack-size">1</span>
           </p>
           <div id="cartPrice">
-            <h3>$2.49</h3>
+            <h3 id="pricing">$2.49</h3>
+          </div>
+        </div> 
+      </div>
+    </template>
+
+    <div id="body-textCart">
+      <template id="roll-template">
+        <div class="rollItem">
+          <div id="explanation">
+            <div id="roll"><img id= "roll-image" src="./images/original-cinnamon-roll.jpg" alt="-cinnamon-roll"></div>
+            <h5 class="remove-button">Remove</h5>
+          </div>
+          <div id="cartExplanation">
+            <p id="roll-type">Original Cinnamon roll <br>
+              Glazing: <span id="glazing">Keep original</span> <br>
+              Pack Size: <span id="pack-size">1</span>
+            </p>
+            <div id="cartPrice">
+              <h3 id="pricing">$2.49</h3>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="cartItems">
+      </template>
+      <div class="rollItem">
         <div id="explanation">
-          <div id="roll"><img src="./images/double-chocolate-cinnamon-roll.jpg" alt="double-chocolate-roll"></div>
+          <div id="roll"><img id="roll-image" src="./images/double-chocolate-cinnamon-roll.jpg" alt="double-chocolate-roll"></div>
           <h5>Remove</h5>
         </div>
         <div id="cartExplanation">
-          <p>Double Chocolate Cinnamon Roll <br>
-            Glazing: Sugar milk <br>
-            Pack Size: 6
+          <p id="roll-type">Double Chocolate Cinnamon Roll <br>
+            Glazing: <span id="glazing">Sugar milk</span><br>
+            Pack Size: <span id="pack-size">6</span>
           </p>
           <div id="cartPrice">
-            <h3>$27.45</h3>
+            <h3 id="pricing">$27.45</h3>
           </div>
         </div>
       </div>
