--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       <li><a href="solution-hw3/hw3Detail.html">Homework Assignment 3</a></li>
       <li><a href="solution-hw4/index.html">Homework Assignment 4</a></li>
       <li><a href="solution-hw4 copy/index.html">Homework Assignment 5</a></li>
+      <li><a href="solution-hw5/index.html"></a></li>
     </ul>
 
   </body>
