changed the names of the files

--- a/solution-hw6/hw6Cart.html
+++ b/solution-hw6/hw6Cart.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <meta charset="UTF-8">
-  <title>HW1 CART</title>
+  <title>hw6 CART</title>
 
-  <link rel="stylesheet" href="./css/hw5.css">
+  <link rel="stylesheet" href="./css/hw6.css">
   <script defer src="./js/rollData.js"></script>
   <script defer src="./js/hw6Cart.js"></script>
 
