--- a/Minsung's Website/eachday.html
+++ b/Minsung's Website/eachday.html
@@ -3,7 +3,8 @@
     <head>
         <meta charset="utf-8">
         <title>eachday</title>
-        <link rel="stylesheet" href="css/Websitecss2.css">
+        <link rel="stylesheet" href="/Minsung's Website/css/Websitecss.css">
+        <link rel="stylesheet" href="/Minsung's Website/css/Websitecss2.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Noto+Serif&display=swap" rel="stylesheet">
@@ -26,7 +27,7 @@
         <main>
             <section id="intro-project">
                 <div class="project-image">
-                    <img src="/Images/Eachday/EachdayBar.png" alt="">
+                    <img src="/Minsung's Website/Images/Eachday/EachdayBar.png" alt="">
                 </div>
                 <div class="tags">
                     <h2>Duration: Fall 2021 ~ Spring 2022</h2>
