--- a/Minsung's Website/index.html
+++ b/Minsung's Website/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Minsung Kang</title>
-    <link rel="stylesheet" href="/css/Websitecss.css">
+    <link rel="stylesheet" href="/Minsung's Website/css/Websitecss.css">
+    <link rel="stylesheet" href="/Minsung's Website/css/Websitecss2.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif&display=swap" rel="stylesheet">
@@ -11,7 +12,7 @@
     <!-- <link rel="stylesheet" href="Websitecss2.css"> -->
   </head>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script type="text/javascript" src="/js/scroll.js">
+  <script type="text/javascript" src="/Minsung's Website/js/scroll.js">
   </script>
   <body>
     <header>
@@ -39,7 +40,7 @@
           </p>
         </div>
         <div class="drawingContainer">
-          <img src="/Images/introDrawing.jpg" alt="oil paster drawing">
+          <img src= "/Minsung's Website/" alt="oil paster drawing">
         </div>
       </section>
       <section id = 'work-section'>
@@ -59,7 +60,7 @@
                   <p class = "workCard-role">Ideation / UI/UX Design / UX Research</p>
                 </div>
                 <div class="workCard-image">
-                  <img src="/Images/Wave.png" alt="wave">
+                  <img src="/Minsung's Website/Images/Wave.png" alt="Wave">
                 </div>
               </div>
             </a>
@@ -73,7 +74,7 @@
                   <p class = "workCard-role">Ideation / UX Research</p>
                 </div>
                 <div class="workCard-image">
-                  <img src="/Images/Eachday/Eachday.png" alt="wave">
+                  <img src="/Minsung's Website/Images/Eachday/Eachday.png" alt="Eachday">
                 </div>
               </div>
             </a>
@@ -87,7 +88,7 @@
                   <p class = "workCard-role">Ideation / UI/UX Design / UX Research</p>
                 </div>
                 <div class="workCard-image">
-                  <img src="/Images/StyleforgeAICover.png" alt="wave">
+                  <img src="/Minsung's Website/Images/StyleforgeAICover.png" alt="StyleForgeAI">
                 </div>
               </div>
             </a>
@@ -165,14 +166,15 @@
         </div>
         <div class="aboutImages">
           <div class="row">
-            <img src="/Images/AboutSection/Ceiling.png" alt="">
-            <img src="/Images/AboutSection/Connecting.png" alt="">
-            <img src="/Images/AboutSection/My Face.png" alt="">
+            <img src="/Minsung's Website/Images/AboutSection/Ceiling.png" alt="Ceiling">
+            <img src="/Minsung's Website/Images/AboutSection/Connecting.png" alt="Connecting">
+            <img src="/Minsung's Website/Images/AboutSection/Flowers.png" alt="Flowers">
           </div>
           <div class="row2">
-            <img src="/Images/AboutSection/Korean Mask.png" alt="">
-            <img src="/Images/AboutSection/Garden.png" alt="">
-            <img src="/Images/AboutSection/Flowers.png" alt="">
+            <img src="/Minsung's Website/Images/AboutSection/Garden.png" alt="Garden">
+            <img src="/Minsung's Website/Images/AboutSection/Korean Mask.png" alt="KoreanMask">
+            <img src="/Minsung's Website/Images/AboutSection/My Face.png" alt="MyFace">
+            <img src="/Minsung's Website/Images/AboutSection/Reflection.png" alt="Reflection">
           </div>
         </div>
       </section>
