file name changed

--- a/Minsung's Website/index.html
+++ b/Minsung's Website/index.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8">
     <title>Minsung Kang</title>
     <link rel="stylesheet" href="/Minsung's Website/css/Websitecss.css">
-    <link rel="stylesheet" href="/Minsung's Website/css/Websitecss2.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif&display=swap" rel="stylesheet">
@@ -40,7 +39,7 @@
           </p>
         </div>
         <div class="drawingContainer">
-          <img src= "/Minsung's Website/" alt="oil paster drawing">
+          <img src= "/Minsung's Website/Images/introDrawing.jpg" alt="oil paster drawing">
         </div>
       </section>
       <section id = 'work-section'>
