updated the images

--- a/Minsung's Website/UCRE.html
+++ b/Minsung's Website/UCRE.html
@@ -27,7 +27,7 @@
         <main>
             <section id="intro-project">
                 <div class="project-image">
-                    <img src="" alt="">
+                    <img src="/Minsung's Website/Images/UCRE/UCREBar.png" alt="">
                 </div>
                 <div class="tags">
                     <h2>Duration: January 2023 ~ March 2023 </h2>
@@ -69,41 +69,41 @@
                     </div>
                 </div>
                 <div id="intro-paragraph">
-                    <div class="logo"></div>
+                    <div class="logo"></div> 
                     <div class="writing">
                         <h1>1. Background Research</h1>
                         <p>begun our research process with rapid background research where we explored platforms like Instagram, and Youtube to gain deeper understanding into how advertisements are presented
                             Through a series of user testing we gained insights relevant to what areas we would like to improve from current platforms.
                         </p>
                         <img src="" alt="">
-                        <h1>2. Data Visualization</h1>
-                        <p></p>
-                        <h1>3. Think Aloud Interviews</h1>
+                        <h1>2. Think Aloud Interviews</h1>
                         <p> </p>
-                        <h1>4. Walk the Wall</h1>
-                        <p></p>
-                        <h1>5. Synthesis</h1>
+                        <h1>3. Walk the Wall</h1>
+                        <p>After gathering notes from interviewws, the team conducted a Walk the Wall procedure where we uses postits on Figjam to label design opportunities,
+                            questions to answer, as well as user painpoints
+                        </p>
+                        <h1>4. Synthesis</h1>
                         <p>From the insights gained from interviews and team discussions, we moved onto narrowing the focal point of our research through dividing the discussions into three sections: Pain Points, Design Ideas, and Questions yet to answer. 
                             By doing so, we were able to actually engage in 
-                        <h1>6. How Might We questions</h1>
+                        <h1>5. How Might We questions</h1>
                         <p>From the areas we would like to improve from Youtube platform, we came up with three main How Might We Statements: How might we make the information
                             on the platform less biased while helping users to engage in contents of their interests?; How might we improve the personalizing ad preferences on Youtube?; 
                             How might be enable users to get more familiar with the ad reporting process on Youtube?
                         </p>
                         <img src="" alt="">
-                        <h1>Survey</h1>
+                        <h1>6. Survey</h1>
                         <p></p>
                         <img src="" alt="">
-                        <h1>Interpretation Note</h1>
+                        <h1>7. Interpretation Note</h1>
                         <p></p>
                         <img src="" alt="">
-                        <h1>Speed Dating</h1>
+                        <h1>8. Speed Dating</h1>
                         <p></p>
                         <img src="" alt="">
-                        <h1>Story Boards + Crazy 8</h1>
+                        <h1>9. Story Boards + Crazy 8</h1>
                         <p></p>
                         <img src="" alt="">
-                        <h1>Prototype Testing</h1>
+                        <h1>10. Prototype Testing</h1>
 
                         
                     </div>
